adjusted z-index for better logic and to correct modal placment

--- a/src/assets/styles/base/_baseTags.scss
+++ b/src/assets/styles/base/_baseTags.scss
@@ -91,7 +91,6 @@ body.bm-overlay {
     section {
         min-height: 97vh;
         padding: 40px 0;
-        z-index: 20;
         @include flexColumnCentered;
         @include makeCenteredFlexBox;
     }
