--- a/src/assets/styles/partials/_home.scss
+++ b/src/assets/styles/partials/_home.scss
@@ -10,8 +10,6 @@
         }
     }
     .splash {
-        background-attachment: fixed;
-        background-position-x: 100%;
         padding: 30vh 0 50px;
         padding: 20vh 0 30px;
         position: absolute;
@@ -51,6 +49,9 @@
             flex-direction: column;
             height: 60vh;
             width: 45vw;
+            *:not(.modal) {
+                z-index: 20;
+            }
             .iconContainer {
                 height: 16px;
                 margin-bottom: 5px;
@@ -105,7 +106,7 @@
         overflow-y: auto;
         padding: 20px 12px 25px 20px;
         position: absolute;
-        z-index: 9999;
+        z-index: 999;
         .modalClose {
             position: relative;
             bottom: 12px;
