--- a/src/assets/styles/partials/_sideNav.scss
+++ b/src/assets/styles/partials/_sideNav.scss
@@ -59,6 +59,7 @@
         }
 
         .bm-burger-button {
+            transition: top 0s;
             .bm-burger-bars {
                 background-color: $black;
             }
